--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,8 +3,11 @@ Title: Tmisc: Turner miscellaneous
 Version: 0.1.0
 Authors: "Stephen Turner <vustephenAAAAAAA@gmail.com> [aut, cre]"
 Description: Some generic convenience functions.
-Depends: R (>= 3.0.2)
-Suggests: knitr, BiocStyle
+Depends:
+    R (>= 3.0.2)
+Suggests:
+    knitr,
+    BiocStyle
 License: GPL-3
 LazyData: true
 VignetteBuilder: knitr
