--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: Tmisc
 Title: Tmisc: Turner miscellaneous
 Version: 0.1.0
-Authors: "Stephen Turner <vustephenAAAAAAA@gmail.com> [aut, cre]"
+Author: Stephen Turner <vustephenAAAAAAA@gmail.com>
+Maintainer: Stephen Turner <vustephenAAAAAAA@gmail.com>
 Description: Some generic convenience functions.
 Depends:
     R (>= 3.0.2)
 Suggests:
-    knitr,
-    BiocStyle
+    knitr
 License: GPL-3
 LazyData: true
 VignetteBuilder: knitr
