--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,7 +1,11 @@
 export("%nin%")
 export(addRawFC)
 export(datename)
+export(ht)
+export(lsa)
+export(lsp)
 export(mergett)
 export(n)
 export(propmiss)
 export(rownames_to_symprobe)
+export(unrowname)
