--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,6 @@ Description: Some generic convenience functions.
 Depends:
     R (>= 3.0.2)
 Suggests:
-    knitr
-License: GPL-3
-LazyData: true
+    knitr, Biobase
+License: GPL-3 + file LICENSE
 VignetteBuilder: knitr
