--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,13 @@
 Package: Tmisc
 Title: Tmisc: Turner miscellaneous
 Version: 0.1.0
-Author: Stephen Turner <vustephenAAAAAAA@gmail.com>
-Maintainer: Stephen Turner <vustephenAAAAAAA@gmail.com>
+Author: Stephen Turner <vustephen@gmail.com>
+Maintainer: Stephen Turner <vustephen@gmail.com>
 Description: Some generic convenience functions.
 Depends:
     R (>= 3.0.0)
 Suggests:
     knitr, Biobase
-License: GPL-3 + file LICENSE
+License: GPL-3
+LazyData: true
 VignetteBuilder: knitr
