--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Author: Stephen Turner <vustephen@gmail.com>
 Maintainer: Stephen Turner <vustephen@gmail.com>
 Description: Some generic convenience functions.
 Depends:
-    R (>= 3.0.0)
+    R (>= 3.0.0), httr
 Suggests:
     knitr, Biobase
 License: GPL-3
