--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,11 +5,11 @@ Author: Stephen Turner <vustephen@gmail.com>
 Maintainer: Stephen Turner <vustephen@gmail.com>
 Description: Some generic convenience functions.
 Depends:
-    R (>= 3.0.0),
-    httr
+    R (>= 3.0.0)
 Suggests:
     knitr,
-    Biobase
+    Biobase,
+    httr
 License: GPL-3
 LazyData: true
 VignetteBuilder: knitr
