--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,7 @@ export(ht)
 export(lsa)
 export(lsp)
 export(mergett)
-export(n)
+export(nn)
 export(propmiss)
 export(read.gist)
 export(registration)
