more documentation, added unfactor and read.cb

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,7 +9,9 @@ export(lsp)
 export(mergett)
 export(nn)
 export(propmiss)
+export(read.cb)
 export(read.gist)
 export(registration)
 export(rownames_to_symprobe)
+export(unfactor)
 export(unrowname)
