--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: Tmisc
-Title: Tmisc: Turner miscellaneous
+Title: Tmisc: Turner miscellaneous functions
 Version: 0.1.0
 Author: Stephen Turner <vustephen@gmail.com>
 Maintainer: Stephen Turner <vustephen@gmail.com>
-Description: Some generic convenience functions.
+Description: The Tmisc package has miscellaneous utility functions for importing and examining data and manipulating output from the limma package.
 Depends:
     R (>= 3.0.0)
 Suggests:
