added sessioninfo clipboard command

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,5 +15,6 @@ export(propmiss)
 export(read.cb)
 export(registration)
 export(rownames_to_symprobe)
+export(sicb)
 export(unfactor)
 export(unrowname)
