--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export("%nin%")
 export(addRawFC)
 export(datename)
+export(deseqresult2tbl)
 export(dfclass)
 export(ipak)
 export(lsa)
@@ -17,4 +18,5 @@ export(rownames_to_symprobe)
 export(sicb)
 export(unfactor)
 export(unrowname)
+import(dplyr)
 importFrom(Biobase,exprs)
