add dfsigfig function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(addRawFC)
 export(datename)
 export(deseqresult2tbl)
 export(dfclass)
+export(dfsigfig)
 export(ipak)
 export(lsa)
 export(lsp)
