add saveit function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(propmiss)
 export(read.cb)
 export(registration)
 export(rownames_to_symprobe)
+export(saveit)
 export(sicb)
 export(unfactor)
 export(unrowname)
