--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,18 +1,13 @@
 Package: Tmisc
-Title: Tmisc: Turner miscellaneous functions
+Title: Turner Miscellaneous
 Version: 0.1.1
 Author: Stephen Turner <vustephen@gmail.com>
 Maintainer: Stephen Turner <vustephen@gmail.com>
-Description: The Tmisc package has miscellaneous utility functions for
-    importing and examining data and manipulating output from the limma
-    package.
+Description: Miscellaneous data and utility functions 
+    for manipulating data and your R environment.
 Depends:
     R (>= 3.0.0)
 Imports:
-    Biobase,
     dplyr
-Suggests:
-    knitr
 License: GPL-3
 LazyData: true
-VignetteBuilder: knitr
