--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Title: Turner Miscellaneous
 Version: 0.1.2
 Author: Stephen Turner <vustephen@gmail.com>
 Maintainer: Stephen Turner <vustephen@gmail.com>
-Description: Miscellaneous data and utility functions 
+Description: Miscellaneous data and utility functions
     for manipulating data and your R environment.
 Depends:
     R (>= 3.0.0)
@@ -12,3 +12,4 @@ Imports:
     utils
 License: GPL-3
 LazyData: true
+RoxygenNote: 5.0.0
