add rescale01 and update namespace

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(datename)
 export(deseqresult2tbl)
 export(dfsigfig)
 export(lmp)
+export(lowestnonzero)
 export(lsa)
 export(lsp)
 export(nn)
@@ -14,6 +15,7 @@ export(peek)
 export(propmiss)
 export(read.cb)
 export(registration)
+export(rescale01)
 export(rownames_to_symprobe)
 export(saveit)
 export(sicb)
