--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,10 +15,11 @@ export(peek)
 export(propmiss)
 export(read.cb)
 export(registration)
-export(rescale01)
+export(rescale)
 export(rownames_to_symprobe)
 export(saveit)
 export(sicb)
+export(strSort)
 export(unfactor)
 export(unrowname)
 import(dplyr)
