add ellipses function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(counts2fpkm)
 export(datename)
 export(deseqresult2tbl)
 export(dfsigfig)
+export(ellipses)
 export(lmp)
 export(lowestnonzero)
 export(lsa)
