add jensen-shannon divergence

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(dokuwiki)
 export(ellipses)
 export(fisherp)
 export(gghues)
+export(jsd)
 export(lmp)
 export(lowestnonzero)
 export(lsa)
@@ -28,6 +29,7 @@ export(unrowname)
 import(dplyr)
 import(utils)
 importFrom(grDevices,hcl)
+importFrom(stats,as.dist)
 importFrom(stats,na.omit)
 importFrom(stats,pchisq)
 importFrom(stats,pf)
