add Tpairs, bump to 0.1.10 for CRAN release

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export("%nin%")
 export(Mode)
+export(Tpairs)
 export(are_all_equal)
 export(counts2fpkm)
 export(datename)
@@ -32,7 +33,21 @@ export(unrowname)
 import(dplyr)
 import(utils)
 importFrom(grDevices,hcl)
+importFrom(graphics,hist)
+importFrom(graphics,lines)
+importFrom(graphics,pairs)
+importFrom(graphics,panel.smooth)
+importFrom(graphics,par)
+importFrom(graphics,rug)
+importFrom(graphics,strwidth)
+importFrom(graphics,text)
 importFrom(stats,as.dist)
+importFrom(stats,cor)
+importFrom(stats,cor.test)
+importFrom(stats,density)
+importFrom(stats,dnorm)
 importFrom(stats,na.omit)
 importFrom(stats,pchisq)
 importFrom(stats,pf)
+importFrom(stats,sd)
+importFrom(stats,symnum)
