add corner function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(Mode)
 export(Thist)
 export(Tpairs)
 export(are_all_equal)
+export(corner)
 export(counts2fpkm)
 export(datename)
 export(deseqresult2tbl)
