add beep function

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,8 @@ Depends:
     R (>= 3.0.0)
 Imports:
     dplyr,
-    utils
+    utils, 
+    audio
 License: GPL-3
 LazyData: true
 RoxygenNote: 5.0.1
