--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(Mode)
 export(Thist)
 export(Tpairs)
 export(are_all_equal)
+export(beep)
 export(corner)
 export(counts2fpkm)
 export(datename)
@@ -32,6 +33,7 @@ export(sicb)
 export(strSort)
 export(unfactor)
 export(unrowname)
+import(audio)
 import(dplyr)
 import(utils)
 importFrom(grDevices,hcl)
