--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: Tmisc
 Title: Turner Miscellaneous
-Version: 0.1.13
-Author: Stephen Turner <vustephen@gmail.com>
+Version: 0.1.14
+Authors@R: person("Stephen", "Turner", email = "vustephen@gmail.com", role = c("aut", "cre"))
 Maintainer: Stephen Turner <vustephen@gmail.com>
 Description: Miscellaneous utility functions for data manipulation,
     data tidying, and working with gene expression data.
