--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(fisherp)
 export(gg_na)
 export(gghues)
 export(jsd)
+export(keep_top_n)
 export(lmp)
 export(lowestnonzero)
 export(lsa)
@@ -41,6 +42,8 @@ export(unrowname)
 import(audio)
 import(dplyr)
 import(utils)
+importFrom(dplyr,count_)
+importFrom(dplyr,semi_join)
 importFrom(grDevices,hcl)
 importFrom(graphics,hist)
 importFrom(graphics,lines)
