allow naming resulting column whatever you want

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -64,3 +64,5 @@ importFrom(stats,pf)
 importFrom(stats,sd)
 importFrom(stats,setNames)
 importFrom(stats,symnum)
+importFrom(tibble,as_tibble)
+importFrom(tibble,rownames_to_column)
