--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,8 +7,10 @@ export(Cs)
 export(Mode)
 export(Thist)
 export(Tpairs)
+export(and)
 export(are_all_equal)
 export(beep)
+export(brackets)
 export(clean_names)
 export(convert_to_NA)
 export(corner)
@@ -17,10 +19,17 @@ export(datename)
 export(deseqresult2tbl)
 export(dfsigfig)
 export(dokuwiki)
+export(dollar)
 export(ellipses)
+export(equals)
 export(fisherp)
 export(gg_na)
 export(gghues)
+export(is_geq)
+export(is_gt)
+export(is_in)
+export(is_leq)
+export(is_lt)
 export(jsd)
 export(keep_top_n)
 export(lmp)
@@ -29,7 +38,9 @@ export(lsa)
 export(lsp)
 export(mat2df)
 export(nn)
+export(not)
 export(o)
+export(or)
 export(peek)
 export(propmiss)
 export(read.cb)
@@ -38,6 +49,12 @@ export(remove_empty_cols)
 export(remove_empty_rows)
 export(rownames_to_symprobe)
 export(saveit)
+export(set_attr)
+export(set_attributes)
+export(set_class)
+export(set_colnames)
+export(set_names)
+export(set_rownames)
 export(sicb)
 export(strSort)
 export(unfactor)
