--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,8 @@ Imports:
     dplyr,
     tibble,
     utils, 
-    audio
+    audio,
+    rstudioapi
 License: GPL-3
 LazyData: true
 RoxygenNote: 6.0.1
