--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(equals)
 export(fisherp)
 export(gg_na)
 export(gghues)
+export(insertInAddin)
 export(is_geq)
 export(is_gt)
 export(is_in)
