--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(equals)
 export(fisherp)
 export(gg_na)
 export(gghues)
+export(gt2refalt)
 export(insertInAddin)
 export(is_geq)
 export(is_gt)
@@ -63,6 +64,7 @@ export(unrowname)
 import(audio)
 import(dplyr)
 import(utils)
+importFrom(dplyr,case_when)
 importFrom(dplyr,count_)
 importFrom(dplyr,semi_join)
 importFrom(grDevices,hcl)
