add in from get it somewhere the f online

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(equals)
 export(fisherp)
 export(gg_na)
 export(gghues)
+export(gistfo)
 export(gt2refalt)
 export(insertEqual)
 export(insertInAddin)
