--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: Tmisc
 Title: Turner Miscellaneous
 Version: 0.1.19
-Authors@R: person("Stephen", "Turner", email = "vustephen@gmail.com", role = c("aut", "cre"))
+Authors@R: person("Stephen", "Turner", email = "vustephen@gmail.com", role = c("aut", "cre"), comment = c(ORCID = "0000-0001-9140-9028"))
 Maintainer: Stephen Turner <vustephen@gmail.com>
 Description: Miscellaneous utility functions for data manipulation,
     data tidying, and working with gene expression data.
@@ -13,7 +13,6 @@ Imports:
     tibble,
     utils, 
     audio,
-    gistr,
     rstudioapi
 License: GPL-3
 LazyData: true
