--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,5 +1,5 @@
-pandoc: 1.19.2.1
-pkgdown: 0.1.0.9000
-pkgdown_sha: b690316e0e84b38fcfb928558fed268e59b02b0a
+pandoc: '2.5'
+pkgdown: 1.3.0
+pkgdown_sha: ~
 articles: []
 
