--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,6 +1,6 @@
-pandoc: 2.9.2.1
-pkgdown: 1.5.1
+pandoc: 3.1.1
+pkgdown: 2.0.7
 pkgdown_sha: ~
-articles: []
-last_built: 2020-09-16T13:32Z
+articles: {}
+last_built: 2023-08-21T18:03Z
 
